--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  place-items: ;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -56,13 +56,13 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    color: #f2f3f5;
+    background-color: #161212;
+    background-image: url('/Forecasts.jpg');
+ 
   }
   a:hover {
-    color: #747bff;
+    color: #030408;
   }
-  button {
-    background-color: #f9f9f9;
-  }
+  
 }
